# Copyright 2018 The Bazel Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")

cc_library(
    name = "stdlib",
    srcs = ["stdlib.cc"],
    hdrs = ["stdlib.h"],
)

cc_test(
    name = "stdlib_test",
    srcs = ["stdlib_test.cc"],
    deps = [":stdlib"],
)

sh_test(
    name = "file_dependency_test",
    srcs = ["file_dependency_test.sh"],
    data = [
        "@llvm_toolchain//:bin/clang-format",
        "@llvm_toolchain//:lib/libc++.a",
    ],
)

cc_test(
    name = "test_asan",
    srcs = ["sanitizer_stub.cpp"],
    copts = ["-fsanitize=address"],
    data = ["@llvm_toolchain//:asan_runtime_components"],
    linkopts = ["-fsanitize=address"],
)

cc_test(
    name = "test_tsan",
    srcs = ["sanitizer_stub.cpp"],
    copts = ["-fsanitize=thread"],
    data = ["@llvm_toolchain//:tsan_runtime_components"],
    linkopts = ["-fsanitize=thread"],
)

cc_test(
    name = "test_lsan",
    srcs = ["sanitizer_stub.cpp"],
    copts = ["-fsanitize=leak"],
    data = ["@llvm_toolchain//:lsan_runtime_components"],
    linkopts = ["-fsanitize=leak"],
)
